<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_page_welcome_tv" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleLoginClick"
            android:text="@string/landing_page_login_button" />

        <Button
            android:id="@+id/ca_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleCreateAccountClick"
            android:text="@string/landing_page_createAccount_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>